CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

message(STATUS "Adding MC-Testing...")

include_directories(${CMAKE_SOURCE_DIR}/include)

file(GLOB_RECURSE HEADERS "${MACE_INCLUDES}/MC-Testing/*.h")
file(GLOB_RECURSE MCT_SRC *.cpp)

add_executable(MC-Testing ${HEADERS} ${MCT_SRC})

target_include_directories (MC-Testing PUBLIC ${GLEW_INCLUDE_DIR})
if(GLEW_FOUND)
	target_link_libraries(MC-Testing LINK_PUBLIC "${GLEW_LIBRARIES}")
else()
	if(${MACE_STATIC_LIBRARY}})
		target_link_libraries(MC-Testing LINK_PUBLIC glew_s)
	else()
		target_link_libraries(MC-Testing LINK_PUBLIC glew)
	endif()
endif()
if(${MACE_STATIC_LIBRARY})
	target_link_libraries(MC-Testing LINK_PUBLIC SDL2-static)
	target_link_libraries(MC-Testing LINK_PUBLIC SDLNet-static)
else()
	target_link_libraries(MC-Testing LINK_PUBLIC SDL2)
	target_link_libraries(MC-Testing LINK_PUBLIC SDLNet)
endif()
target_link_libraries(MC-Testing LINK_PUBLIC SDL2main)
target_link_libraries(MC-Testing LINK_PUBLIC MC-System)
target_link_libraries(MC-Testing LINK_PUBLIC MC-Window)
target_link_libraries(MC-Testing LINK_PUBLIC MC-Graphics)
target_link_libraries(MC-Testing LINK_PUBLIC MC-Network)
target_link_libraries(MC-Testing LINK_PUBLIC MC-Audio)